--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "ejs": "^3.0.1",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
-    "mysql2": "^2.1.0",
+    "mysql2": "^1.6.1",
     "pug": "^2.0.4",
-    "sequelize": "^5.21.5"
+    "sequelize": "^5.0.0-beta.11"
   }
 }
