--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "mongodb": "^3.5.5",
     "mongoose": "^5.9.5",
     "mysql2": "^1.6.1",
+    "nodemailer": "^6.4.6",
     "pug": "^2.0.4",
     "sequelize": "^5.0.0-beta.11"
   }
