--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "multer": "^1.4.2",
     "mysql2": "^1.6.1",
     "nodemailer": "^6.4.6",
+    "pdfkit": "^0.11.0",
     "pug": "^2.0.4",
     "sequelize": "^5.0.0-beta.11"
   }
