--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "nodemailer": "^6.4.6",
     "pdfkit": "^0.11.0",
     "pug": "^2.0.4",
-    "sequelize": "^5.0.0-beta.11"
+    "sequelize": "^5.0.0-beta.11",
+    "stripe": "^8.36.0"
   }
 }
