--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "start": "NODE_ENV=production MONGO_USER=idris MONGO_PASSWORD=Hayindehdb2019 MONGO_DEFAULT_DB=shop STRIPE_KEY=sk_test_7Ja5H6YOybOol7TGm8vDtEo700ZiEZK2xd node app.js",
+    "dev": "nodemon app.js"
   },
   "repository": {
     "type": "git",
