--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "compression": "^1.7.4",
     "connect-flash": "^0.1.1",
     "connect-mongodb-session": "^2.3.1",
     "csurf": "^1.11.0",
@@ -32,6 +33,7 @@
     "express-handlebars": "^3.1.0",
     "express-session": "^1.17.0",
     "express-validator": "^6.4.0",
+    "helmet": "^3.22.0",
     "mongodb": "^3.5.5",
     "mongoose": "^5.9.5",
     "multer": "^1.4.2",
