--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "Node.js Guide",
   "main": "app.js",
+  "engines": {
+    "node": "12.13.1"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "NODE_ENV=production MONGO_USER=idris MONGO_PASSWORD=Hayindehdb2019 MONGO_DEFAULT_DB=shop STRIPE_KEY=sk_test_7Ja5H6YOybOol7TGm8vDtEo700ZiEZK2xd node app.js",
