PREPARED FOR A New DEPLOYMENT

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "NODE_ENV=production MONGO_USER=idris MONGO_PASSWORD=Hayindehdb2019 MONGO_DEFAULT_DB=shop STRIPE_KEY=sk_test_7Ja5H6YOybOol7TGm8vDtEo700ZiEZK2xd node app.js",
+    "start": "NODE_ENV=production MONGO_USER=idris MONGO_PASSWORD=Hayindehdb2019 MONGO_DEFAULT_DB=shop STRIPE_KEY=sk_test_7Ja5H6YOybOol7TGm8vDtEo700ZiEZK2xd USERNAME=naddad1111@gmail.com PASSWORD=naddad1234@ node app.js",
     "dev": "nodemon app.js"
   },
   "repository": {
